--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,6 @@
 
 // Colores
-$primary-color: #5dac6d; //#7C3AED
+$primary-color: #5dac6d; //#7C3AED;
 $main-gray: #E7E7E7;
 $main-black: #111111;
 $white: #ffffff;
