--- a/src/assets/styles/_general.scss
+++ b/src/assets/styles/_general.scss
@@ -1,3 +1,4 @@
+@import './custom'; 
 
 html {
     scroll-behavior: smooth;
@@ -10,7 +11,7 @@ body {
 }
 
 p {
-  line-height: 24px;
+  line-height: rem(24);
 }
 
 img{
@@ -23,23 +24,23 @@ strong{
 }
 
 .container{
-  max-width: 1200px;
+  max-width: $size-large;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: rem(20);
+  padding-right: rem(20);
 }
 
 section.home-section{
   &:nth-child(odd) {
-    background-color: #E7E7E7;
+    background-color: $main-gray;
   }
   &:nth-child(even) {
-    background-color: #5dac6d;
+    background-color: $primary-color;
   }
 }
 
 .section__container{
-  max-width: 1200px;
+  max-width: $size-large;
   margin: 0 auto;
-  padding: 60px 20px;
+  padding: rem(60) rem(20);
 }
