--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -1,4 +1,4 @@
-// @use '@assets/styles/main' as *;
+// @import '@assets/styles/main';
 
 
 
@@ -53,7 +53,7 @@
 //   }
 // }
 
-@use '@assets/styles/main' as *;
+@import '@assets/styles/main';
 
 
 
