--- a/src/components/sections/Experience/Timeline/Timeline.module.scss
+++ b/src/components/sections/Experience/Timeline/Timeline.module.scss
@@ -1,4 +1,4 @@
-@use '@assets/styles/main' as *;
+@import '@assets/styles/main';
 
 
 
@@ -64,7 +64,10 @@
     max-width: rem(300);
     position: relative;
     z-index: 30;
-    width: 100%;
+
+    @media (min-width: $size-mobile){
+      width: 100%;
+    }
   }
 
   &__title {
