--- a/src/components/sections/Intro/Intro.module.scss
+++ b/src/components/sections/Intro/Intro.module.scss
@@ -1,9 +1,7 @@
-@use '@assets/styles/main' as *;
-
-
+@import '@assets/styles/main';
 
 .intro{
-  min-height: 100%;
+  min-height: 100vh;
   box-sizing: border-box;
   position: relative;
   height: 100vh;
@@ -147,8 +145,7 @@
 
       @media (min-width: $size-tablet){
         width: auto;
-        background-color: transparent;
-        padding: auto;
+        padding: rem(10) rem(30);
       }
       
     }
