Color and typo change

--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -4,5 +4,6 @@
 /* Typography */
 $default-fonts: Helvetica, Arial, sans-serif;
 $primary-font: 'roboto', $default-fonts;
-$secondary-font: 'satisfy', $default-fonts;
+// $secondary-font: 'satisfy', $default-fonts;
+$secondary-font: 'Poppins', $default-fonts;
 $code-font: 'firaCode', $default-fonts;
