--- a/src/components/layout/Header/HeaderLogo/HeaderLogo.module.scss
+++ b/src/components/layout/Header/HeaderLogo/HeaderLogo.module.scss
@@ -12,6 +12,11 @@
         cursor: pointer;
     }
 
+    img{
+        width: rem(60);
+        height: rem(60);
+    }
+
     &-text{
         font-size: rem(18);
         font-weight: bold;
