--- a/src/components/common/SectionHeader/SectionHeader.module.scss
+++ b/src/components/common/SectionHeader/SectionHeader.module.scss
@@ -8,10 +8,12 @@
     margin: 0 auto rem(40);
 
     &-title{
-        font-size: rem(36);
+        font-size: rem(26);
         font-family: $secondary-font;
         text-align: center;
         margin-bottom: rem(20);
+        text-transform: uppercase;
+        font-weight: 500;
     }
     
     &-text{
